--- a/app/src/main/res/layout/fragment_editor_todo.xml
+++ b/app/src/main/res/layout/fragment_editor_todo.xml
@@ -33,7 +33,8 @@
         android:layout_marginEnd="24dp"
         android:clickable="true"
         android:enabled="false"
-        android:text="Selesai"
+        android:focusable="true"
+        android:text="@string/finish"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/etTodoName"
